Force scrollbar on all pages to avoid layout shift

--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -2,6 +2,10 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+body {
+    overflow-y:scroll;
+}
+
 a, .btn-link {
     color: #006bb7;
 }
